ext/frc42_dispatch/macros/tests/naming/empty-name-string.stderr
error: proc macro panicked
  --> tests/naming/empty-name-string.rs:12:18
   |
12 |     let _str_hash = method_hash!("");
   |                     ^^^^^^^^^^^^^^^^
   |
   = help: message: called `Result::unwrap()` on an `Err` value: EmptyString
